textarea height reset after sending msg and removed preloader during chat switch

--- a/public/custom/custum.css
+++ b/public/custom/custum.css
@@ -859,7 +859,7 @@ label:focus,
 
 #frame .content .messages ul li img {
     width: 22px;
-    border-radius: 50%;
+    /*border-radius: 50%;*/
     float: left;
 }
 #frame .content .messages ul li .avatar {
