--- a/public/custom/custum.css
+++ b/public/custom/custum.css
@@ -88,7 +88,25 @@ label:focus,
     outline:0px !important;
     -webkit-appearance:none;
 }
+#textarea1::-webkit-input-placeholder {
+  color: #757272 !important;
+}
 
+#textarea1:-moz-placeholder { /* Firefox 18- */
+  color: #757272 !important;  
+}
+
+#textarea1::-moz-placeholder {  /* Firefox 19+ */
+  color: #757272 !important;  
+}
+
+#textarea1:-ms-input-placeholder {
+  color: #757272 !important;  
+}
+
+#textarea1::placeholder {
+  color: #757272 !important;  
+}
 @media screen and (max-width: 735px) {
     #frame #sidepanel #profile {
         width: 100%;
