user typing indicator and name processor

--- a/public/custom/custum.css
+++ b/public/custom/custum.css
@@ -619,6 +619,7 @@ label:focus,
     text-transform: capitalize;
     position: relative;
     left: 40px;
+    top: -10px;
 }
 
 #frame #sidepanel #contacts ul li.contact .wrap .meta .preview {
